# docker-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
docs/: PROJECT.md
