[tool.poetry]
name = "fastapi-docker"
version = "0.1.0"
description = "A simple FastAPI project"
authors = ["Andre"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
databases = "^0.9.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
